--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,90 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root{
+     --primary: #0d6efd;
+        --secondary: #6c757d;
+    --dark: #212529;
+    --light: #f8f9fa;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+
 }
+body{
+    background-color: var(--light);
+}
+
+.App{
+    display: flex;
+    padding: 16px;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+.calculadora{
+    width: 100%;
+    max-width: 400px;
+    background-color: #FFF;
+    border-radius: 15px;
+    overflow: hidden;
+    box-shadow: 0 2px 64px rgba(0,0,0,0.2);
+}
+.display{
+    background-color: #000;
+    text-align: right;
+    padding: 16px;
+    color: #FFF;
+    font-size: 24px;
+    font-weight: 500;
+}
+.display span{
+    font-size: 12px;
+    color:#888;
+
+}
+
+button{
+    appearance: none;
+    border: none;
+    outline: none;
+    color: white;
+    font-size: 20px;
+    padding: 16px;
+    cursor: pointer;
+    transition: 0.4s;
+}
+
+button:hover{
+    opacity: 0.9;
+}
+
+.operadores button{
+    display: flex;
+}
+.operadores button{
+    flex: 1 1 0%;
+    background-color: var(--primary);
+    font-weigth: 700;
+}
+
+.digitos{
+    display:flex;
+    flex-wrap: wrap;
+}
+
+.digitos button{
+    flex: 1 1 33.333%;
+    max-width: 33.333%;
+    background-color: var(--dark);
+}
+
+
+
+
+
+
+
+
+
